--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,29 @@ h1 {
     margin-top: 40px;
   text-align: center;
 }
+h4{
+  text-align: center;
+}
 
 .container{
     margin-top: 40px;
 }
 .links{
-    display: flex;
-    justify-content: space-evenly;
-    text-align: center;
-    color: black;
+  text-align: center;
+  margin: 30px;
+}
+ul li{
+  display: inline;
+  
+}
+.about_films{
+  text-align: center;
+}
+ol a{
+  color: black;
+}
+ol {
+  list-style-type: none;
 }
 .hist_img{
     display: block;
